# custom_channel_rattler_build

./: .gitignore  README.md  pixi.toml
simple_channel_a/: recipe.yaml
simple_channel_b/: recipe.yaml
simple_package_a/: pyproject.toml
simple_package_a/src/simple_package_a/: __init__.py
simple_package_b/: pyproject.toml
simple_package_b/src/simple_package_b/: __init__.py
test_channels/: pixi.toml
