[project]
authors = [{name = "Julian Hofer", email = "julianhofer@gnome.org"}]
dependencies = []
description = "Add a short description here"
name = "simple_package_b"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
simple_package_b = { path = ".", editable = true }

[project.scripts]
simple-b = "simple_package_b:main"
